# analise-vendas-loja-ecommerce

./: README.md  lista-de-tarefas.md  pyproject.toml
analise-vendas-loja-ecommerce/: analise_vendas.ipynb  etl.ipynb  gerar_dados_vendas.py
analise-vendas-loja-ecommerce/dados/: bronze.py  gerar_dados_vendas.py  gerar_dados_vendas_bronze.py  gold.py  silver.py  transformar_dados_silver.py
analise-vendas-loja-ecommerce/notebooks/: etl.ipynb
analise-vendas-loja-ecommerce/output/: dados_bronze.csv  dados_gold.csv  dados_vendas_bronze.csv  dados_vendas_silver.csv
